--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dexie-react-hooks": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.15.0",
     "uuid": "^9.0.0"
   },
